# ChangeLog for dev-ruby/ox
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ox/ChangeLog,v 1.14 2015/04/23 21:22:06 mrueg Exp $

*ox-2.2.0 (23 Apr 2015)

  23 Apr 2015; Manuel Rüger <mrueg@gentoo.org> +ox-2.2.0.ebuild:
  Version bump.

*ox-2.1.8 (21 Feb 2015)

  21 Feb 2015; Manuel Rüger <mrueg@gentoo.org> +ox-2.1.8.ebuild,
  -ox-2.1.4.ebuild, -ox-2.1.6.ebuild:
  Version bump. Remove old.

*ox-2.1.7 (01 Feb 2015)

  01 Feb 2015; Manuel Rüger <mrueg@gentoo.org> +ox-2.1.7.ebuild:
  Version bump.

*ox-2.1.6 (01 Jan 2015)

  01 Jan 2015; Manuel Rüger <mrueg@gentoo.org> +ox-2.1.6.ebuild,
  -ox-2.1.1.ebuild, -ox-2.1.3.ebuild:
  Version bump. Remove old. Add ruby22 target.

*ox-2.1.4 (07 Dec 2014)

  07 Dec 2014; Manuel Rüger <mrueg@gentoo.org> +ox-2.1.4.ebuild:
  Version bump.

*ox-2.1.3 (01 Aug 2014)

  01 Aug 2014; Manuel Rüger <mrueg@gentoo.org> +ox-2.1.3.ebuild,
  -ox-2.1.2.ebuild:
  Version bump. Cleanup old.

*ox-2.1.2 (20 Jul 2014)

  20 Jul 2014; Manuel Rüger <mrueg@gentoo.org> +ox-2.1.2.ebuild:
  Version bump.

  24 Apr 2014; Manuel Rüger <mrueg@gentoo.org> -ox-2.0.12.ebuild,
  -ox-2.1.0.ebuild, ox-2.1.1.ebuild:
  Remove ruby18 support. Cleanup old.

*ox-2.1.1 (13 Feb 2014)

  13 Feb 2014; Manuel Rüger <mrueg@gentoo.org> +ox-2.1.1.ebuild:
  Version bump.

*ox-2.1.0 (05 Feb 2014)

  05 Feb 2014; Manuel Rüger <mrueg@gentoo.org> +ox-2.1.0.ebuild,
  -ox-2.0.9-r1.ebuild:
  Version bump. Add ruby21 target. Cleanup old.

*ox-2.0.12 (02 Dec 2013)

  02 Dec 2013; Manuel Rüger <mrueg@gentoo.org> +ox-2.0.12.ebuild,
  -ox-2.0.9.ebuild:
  Version bump. Cleanup old.

*ox-2.0.9-r1 (05 Oct 2013)

  05 Oct 2013; Manuel Rüger <mrueg@gentoo.org> +ox-2.0.9-r1.ebuild:
  Add ruby20 target.

*ox-2.0.9 (02 Sep 2013)

  02 Sep 2013; Manuel Rüger <mrueg@gentoo.org> +ox-2.0.9.ebuild,
  -ox-2.0.8.ebuild:
  Version bump. Cleanup old.

*ox-2.0.8 (14 Aug 2013)
