@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/ox
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ox/ChangeLog,v 1.14 2015/04/23 21:22:06 mrueg Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ox/ChangeLog,v 1.15 2015/06/07 18:57:07 jlec Exp $
+
+  07 Jun 2015; Justin Lecher <jlec@gentoo.org> metadata.xml:
+  Add github to remote-id in metadata.xml
 
 *ox-2.2.0 (23 Apr 2015)
 
